# minigrad

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  iris.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.py  torch_iris.py
.github/workflows/: test.yaml
eval/: cifar.py  cifar_torch.py  iris.py  iris_torch.py  mnist.py  mnnist.py  pbcopy  torch_iris.py
minigrad/: __init__.py  function.py  ops.py  optim.py  tensor.py  util.py
src/minigrad/: ops.py  optim.py  tensor.py  util.py
test/: test_basic.py  test_ops.py
