[project]
name = "minigrad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marko Elez", email = "markoelez7@gmail.com" }
]
requires-python = ">=3.11.6"
dependencies = [
    "colorama>=0.4.6",
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "torch>=2.7.1",
]
